--- a/android-application/app/src/main/res/values/strings.xml
+++ b/android-application/app/src/main/res/values/strings.xml
@@ -30,11 +30,12 @@
 
     <!--WalletFragment-->
     <string name="wallet_available">Available</string>
-    <string name="wallet_btn_receive">Receive</string>
-    <string name="wallet_btn_send">Send</string>
+    <string name="wallet_in_progress">In progress</string>
+    <string name="wallet_btn_receive">receive</string>
+    <string name="wallet_btn_send">send</string>
     <string name="wallet_status_received">Received</string>
     <string name="wallet_status_sent">Sent</string>
-    <string name="wallet_transactions_title">Transactions</string>
+    <string name="wallet_transactions_title">Active transactions</string>
 
     <!--UtxoActivity-->
     <string name="utxo_height">Height</string>
