--- a/android-application/app/src/main/res/values/strings.xml
+++ b/android-application/app/src/main/res/values/strings.xml
@@ -50,4 +50,11 @@
 
     <!--TransactionDetailsScreen-->
     <string name="transaction_details_title">Transaction details</string>
+    <string name="transaction_details_general_info">General transaction info</string>
+    <string name="transaction_details_start_address">Start address:</string>
+    <string name="transaction_details_end_address">End address:</string>
+    <string name="transaction_details_current_amount">Current amount:</string>
+    <string name="transaction_details_transaction_fee">Transaction fee:</string>
+    <string name="transaction_details_comment">Comment:</string>
+    <string name="transaction_details_transaction_history">Transaction history</string>
 </resources>
